{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 209,
  "lineage": "3e874c10-3758-87d6-9792-9ebad9edd8d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ad5c8900f5eedbe",
            "arn": "arn:aws:ec2:eu-west-2:767397876306:elastic-ip/eipalloc-04ad5c8900f5eedbe",
            "domain": "vpc",
            "id": "eipalloc-04ad5c8900f5eedbe",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-52-56-216-77.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.216.77",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "Dev",
              "Team": "Alpha"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:internet-gateway/igw-09e9a79887d600c22",
            "id": "igw-09e9a79887d600c22",
            "owner_id": "767397876306",
            "tags": {
              "Name": "Alpha-vpc-igw"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Alpha-vpc-igw",
              "Team": "Alpha"
            },
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ad5c8900f5eedbe",
            "association_id": "eipassoc-06d65a15736567362",
            "connectivity_type": "public",
            "id": "nat-037cadd307f865609",
            "network_interface_id": "eni-04ae778cfc99b5b7c",
            "private_ip": "10.0.0.254",
            "public_ip": "52.56.216.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a051ab774479f2e6",
            "tags": {
              "Name": "Alpha-vpc-ngw"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Alpha-vpc-ngw",
              "Team": "Alpha"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:route-table/rtb-01eec2c5cc82731d3",
            "id": "rtb-01eec2c5cc82731d3",
            "owner_id": "767397876306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "database-route-database"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "database-route-database",
              "Team": "Alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:route-table/rtb-02ad34ad3f4205466",
            "id": "rtb-02ad34ad3f4205466",
            "owner_id": "767397876306",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037cadd307f865609",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "private_rt",
              "Team": "Alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:route-table/rtb-096078be7bb741afd",
            "id": "rtb-096078be7bb741afd",
            "owner_id": "767397876306",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e9a79887d600c22",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "public_rt",
              "Team": "Alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c86f4e35a5a5302a",
            "route_table_id": "rtb-01eec2c5cc82731d3",
            "subnet_id": "subnet-0cc56695baf271a94"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006ba788b5f3deae7",
            "route_table_id": "rtb-01eec2c5cc82731d3",
            "subnet_id": "subnet-015e330d7b6d99173"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9ed4bd542256343",
            "route_table_id": "rtb-01eec2c5cc82731d3",
            "subnet_id": "subnet-0d781dd5a4c474804"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6842258e84203b6",
            "route_table_id": "rtb-02ad34ad3f4205466",
            "subnet_id": "subnet-0f6ea1d611172d8c0"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc16915873633602",
            "route_table_id": "rtb-02ad34ad3f4205466",
            "subnet_id": "subnet-0b2ed122a0e7c9da2"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba74a5f5daa42928",
            "route_table_id": "rtb-02ad34ad3f4205466",
            "subnet_id": "subnet-08fb305093c3d1a82"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b9a0a6990549e2e",
            "route_table_id": "rtb-096078be7bb741afd",
            "subnet_id": "subnet-0a051ab774479f2e6"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03460d1bd587bad0f",
            "route_table_id": "rtb-096078be7bb741afd",
            "subnet_id": "subnet-0e28b647ca01716cd"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c80e14c634ab9b3",
            "route_table_id": "rtb-096078be7bb741afd",
            "subnet_id": "subnet-0a220380a1687931f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:security-group/sg-0cdd6244aff911496",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdd6244aff911496",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Alpha-vpc-sg",
            "name_prefix": "",
            "owner_id": "767397876306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Alpha-vpc-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Alpha-vpc-sg",
              "Team": "Alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:subnet/subnet-0cc56695baf271a94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc56695baf271a94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397876306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbsub_0"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dbsub_0",
              "Team": "Alpha"
            },
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:subnet/subnet-015e330d7b6d99173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015e330d7b6d99173",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397876306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbsub_1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dbsub_1",
              "Team": "Alpha"
            },
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:subnet/subnet-0d781dd5a4c474804",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d781dd5a4c474804",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397876306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbsub_2"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dbsub_2",
              "Team": "Alpha"
            },
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:subnet/subnet-0f6ea1d611172d8c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6ea1d611172d8c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397876306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-Alpha-vpc_0"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "private-subnet-Alpha-vpc_0",
              "Team": "Alpha"
            },
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:subnet/subnet-0b2ed122a0e7c9da2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2ed122a0e7c9da2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397876306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-Alpha-vpc_1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "private-subnet-Alpha-vpc_1",
              "Team": "Alpha"
            },
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:subnet/subnet-08fb305093c3d1a82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.16.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fb305093c3d1a82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397876306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-Alpha-vpc_2"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "private-subnet-Alpha-vpc_2",
              "Team": "Alpha"
            },
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:subnet/subnet-0a051ab774479f2e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a051ab774479f2e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397876306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-Alpha-vpc_0"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "public-subnet-Alpha-vpc_0",
              "Team": "Alpha"
            },
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:subnet/subnet-0e28b647ca01716cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e28b647ca01716cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397876306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-Alpha-vpc_1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "public-subnet-Alpha-vpc_1",
              "Team": "Alpha"
            },
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:subnet/subnet-0a220380a1687931f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a220380a1687931f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397876306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-Alpha-vpc_2"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "public-subnet-Alpha-vpc_2",
              "Team": "Alpha"
            },
            "vpc_id": "vpc-0ffc629576eb62836"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397876306:vpc/vpc-0ffc629576eb62836",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09da85069c1bed7b8",
            "default_route_table_id": "rtb-0efd694b38aecd048",
            "default_security_group_id": "sg-0b649899f6fb14ec3",
            "dhcp_options_id": "dopt-03ffb8ccdd954e895",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ffc629576eb62836",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0efd694b38aecd048",
            "owner_id": "767397876306",
            "tags": {
              "Name": "Alpha-vpc"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Alpha-vpc",
              "Team": "Alpha"
            }
          }
        }
      ]
    }
  ]
}